@@ -4,57 +4,153 @@ import us.ihmc.commons.MathTools;
 import us.ihmc.euclid.referenceFrame.FramePoint3D;
 import us.ihmc.euclid.referenceFrame.ReferenceFrame;
 import us.ihmc.euclid.referenceFrame.interfaces.FrameVector3DReadOnly;
+import us.ihmc.humanoidRobotics.communication.controllerAPI.command.QuadrupedTimedStepCommand;
+import us.ihmc.humanoidRobotics.communication.controllerAPI.command.QuadrupedTimedStepListCommand;
+import us.ihmc.humanoidRobotics.communication.controllerAPI.command.SoleTrajectoryCommand;
 import us.ihmc.quadrupedRobotics.planning.YoQuadrupedTimedStep;
-import us.ihmc.quadrupedRobotics.planning.stepStream.QuadrupedStepStream;
-import us.ihmc.robotics.lists.GenericTypeBuilder;
+import us.ihmc.quadrupedRobotics.util.TimeIntervalTools;
+import us.ihmc.quadrupedRobotics.util.YoPreallocatedList;
+import us.ihmc.robotics.lists.RecyclingArrayDeque;
 import us.ihmc.robotics.lists.RecyclingArrayList;
+import us.ihmc.robotics.robotSide.QuadrantDependentList;
+import us.ihmc.robotics.robotSide.RobotQuadrant;
 import us.ihmc.yoVariables.parameters.DoubleParameter;
 import us.ihmc.yoVariables.registry.YoVariableRegistry;
 import us.ihmc.yoVariables.variable.YoBoolean;
 import us.ihmc.yoVariables.variable.YoDouble;
+import us.ihmc.yoVariables.variable.YoInteger;
 
 import java.util.ArrayList;
+import java.util.List;
 
 public class QuadrupedStepMessageHandler
 {
    private static final ReferenceFrame worldFrame = ReferenceFrame.getWorldFrame();
-
-   private static final int STEP_QUEUE_SIZE = 10;
+   private static final int STEP_QUEUE_SIZE = 40;
 
    private final YoVariableRegistry registry = new YoVariableRegistry(getClass().getSimpleName());
 
-   private final RecyclingArrayList<YoQuadrupedTimedStep> stepSequence;
+   private final QuadrantDependentList<RecyclingArrayDeque<SoleTrajectoryCommand>> upcomingFootTrajectoryCommandList = new QuadrantDependentList<>();
+
+   private final YoInteger numberOfStepsToRecover = new YoInteger("numberOfStepsToRecover", registry);
 
    private final ArrayList<YoQuadrupedTimedStep> activeSteps = new ArrayList<>();
-
-   private final QuadrupedStepStream stepStream;
    private final YoDouble robotTimestamp;
-
-   private final DoubleParameter haltTransitionDurationParameter = new DoubleParameter("haltTransitionDuration", registry, 1.0);
-
-   private final FramePoint3D tempPoint = new FramePoint3D();
+   private final DoubleParameter haltTransitionDurationParameter = new DoubleParameter("haltTransitionDuration", registry, 0.0);
+   private final YoPreallocatedList<YoQuadrupedTimedStep> receivedStepSequence;
 
    private final YoDouble haltTime = new YoDouble("haltTime", registry);
    private final YoBoolean haltFlag = new YoBoolean("haltFlag", registry);
 
-   public QuadrupedStepMessageHandler(QuadrupedStepStream stepStream, YoDouble robotTimestamp, YoVariableRegistry parentRegistry)
+   public QuadrupedStepMessageHandler(YoDouble robotTimestamp, YoVariableRegistry parentRegistry)
    {
-      this.stepStream = stepStream;
       this.robotTimestamp = robotTimestamp;
+      this.receivedStepSequence = new YoPreallocatedList<>("receivedStepSequence", registry, STEP_QUEUE_SIZE, YoQuadrupedTimedStep::new);
 
-      stepSequence = new RecyclingArrayList<>(STEP_QUEUE_SIZE, new GenericTypeBuilder<YoQuadrupedTimedStep>()
-      {
-         private int stepNumber = 0;
-         @Override
-         public YoQuadrupedTimedStep newInstance()
-         {
-            YoQuadrupedTimedStep step = new YoQuadrupedTimedStep("stepSequence" + stepNumber, registry);
-            stepNumber++;
-            return step;
-         }
-      });
+      for (RobotQuadrant robotQuadrant : RobotQuadrant.values)
+         upcomingFootTrajectoryCommandList.put(robotQuadrant, new RecyclingArrayDeque<>(SoleTrajectoryCommand.class));
+
+      // the look-ahead step adjustment was doing integer division which was 1.0 for step 0 and 0.0 after, so effectively having a one step recovery
+      // TODO tune this value
+      numberOfStepsToRecover.set(1);
 
       parentRegistry.addChild(registry);
+   }
+
+   public boolean isStepPlanAvailable()
+   {
+      return receivedStepSequence.size() > 0;
+   }
+
+   /**
+    * Consumes incoming footsteps and adjusts their position by the given vector
+    */
+   public void process()
+   {
+      TimeIntervalTools.removeEndTimesLessThan(robotTimestamp.getDoubleValue(), receivedStepSequence);
+      if (haltFlag.getBooleanValue())
+         pruneHaltedSteps();
+
+      updateActiveSteps();
+   }
+
+   public void handleQuadrupedTimedStepListCommand(QuadrupedTimedStepListCommand command)
+   {
+      double currentTime = robotTimestamp.getDoubleValue();
+      boolean isExpressedInAbsoluteTime = command.isExpressedInAbsoluteTime();
+      RecyclingArrayList<QuadrupedTimedStepCommand> stepCommands = command.getStepCommands();
+
+      receivedStepSequence.clear();
+      for (int i = 0; i < Math.min(stepCommands.size(), STEP_QUEUE_SIZE); i++)
+      {
+         double timeShift = isExpressedInAbsoluteTime ? 0.0 : currentTime;
+         double touchdownTime = stepCommands.get(i).getTimeIntervalCommand().getEndTime();
+         if (touchdownTime + timeShift >= currentTime)
+         {
+            receivedStepSequence.add();
+            YoQuadrupedTimedStep step = receivedStepSequence.get(receivedStepSequence.size() - 1);
+            step.set(stepCommands.get(i));
+            step.getTimeInterval().shiftInterval(timeShift);
+         }
+      }
+
+      TimeIntervalTools.sortByEndTime(receivedStepSequence);
+   }
+
+   public void clearSteps()
+   {
+      receivedStepSequence.clear();
+      activeSteps.clear();
+   }
+
+   public void handleSoleTrajectoryCommand(List<SoleTrajectoryCommand> commands)
+   {
+      for (int i = 0; i < commands.size(); i++)
+      {
+         SoleTrajectoryCommand command = commands.get(i);
+         upcomingFootTrajectoryCommandList.get(command.getRobotQuadrant()).addLast(command);
+      }
+   }
+
+   public SoleTrajectoryCommand pollFootTrajectoryForSolePositionControl(RobotQuadrant swingQuadrant)
+   {
+      return upcomingFootTrajectoryCommandList.get(swingQuadrant).poll();
+   }
+
+   public boolean hasFootTrajectoryForSolePositionControl(RobotQuadrant swingQuadrant)
+   {
+      return !upcomingFootTrajectoryCommandList.get(swingQuadrant).isEmpty();
+   }
+
+   public boolean hasFootTrajectoryForSolePositionControl()
+   {
+      for (RobotQuadrant robotQuadrant : RobotQuadrant.values)
+      {
+         if (hasFootTrajectoryForSolePositionControl(robotQuadrant))
+            return true;
+      }
+
+      return false;
+   }
+
+   public void clearFootTrajectory(RobotQuadrant robotQuadrant)
+   {
+      upcomingFootTrajectoryCommandList.get(robotQuadrant).clear();
+   }
+
+   public void clearFootTrajectory()
+   {
+      for (RobotQuadrant robotQuadrant : RobotQuadrant.values)
+         clearFootTrajectory(robotQuadrant);
+   }
+
+   private void pruneHaltedSteps()
+   {
+      for (int i = receivedStepSequence.size() - 1; i >= 0; i--)
+      {
+         if (receivedStepSequence.get(i).getTimeInterval().getStartTime() > haltTime.getDoubleValue())
+            receivedStepSequence.remove(i);
+      }
    }
 
    public void initialize()
@@ -62,51 +158,38 @@ public class QuadrupedStepMessageHandler
       haltFlag.set(false);
    }
 
-   public void consumeIncomingSteps()
-   {
-      // update step plan
-      stepSequence.clear();
-      for (int i = 0; i < stepStream.getSteps().size(); i++)
-      {
-         if (!haltFlag.getBooleanValue() || stepStream.getSteps().get(i).getTimeInterval().getEndTime() < haltTime.getDoubleValue())
-         {
-            YoQuadrupedTimedStep step = stepSequence.add();
-            step.set(stepStream.getSteps().get(i));
-         }
-      }
-
-      updateActiveSteps();
-   }
-
-   public void adjustStepQueue(FrameVector3DReadOnly stepAdjustment)
-   {
-      for (int i = 0; i < stepSequence.size(); i++)
-      {
-         YoQuadrupedTimedStep step = stepSequence.get(i);
-         step.getGoalPosition(tempPoint);
-         tempPoint.changeFrame(worldFrame);
-         tempPoint.add(stepAdjustment);
-         step.setGoalPosition(tempPoint);
-      }
-   }
-
    public boolean isDoneWithStepSequence()
    {
-      return stepSequence.size() == 0 || stepSequence.getLast().getTimeInterval().getEndTime() < robotTimestamp.getDoubleValue();
+      return receivedStepSequence.size() == 0 || receivedStepSequence.get(receivedStepSequence.size() - 1).getTimeInterval().getEndTime() < robotTimestamp
+            .getDoubleValue();
+   }
+
+   private final FramePoint3D tempStep = new FramePoint3D();
+
+   public void shiftPlanBasedOnStepAdjustment(FrameVector3DReadOnly stepAdjustment)
+   {
+      int numberOfStepsToAdjust = Math.min(numberOfStepsToRecover.getIntegerValue(), receivedStepSequence.size());
+      for (int i = 0; i < numberOfStepsToAdjust; i++)
+      {
+         double multiplier = (numberOfStepsToRecover.getIntegerValue() - i) / (double) numberOfStepsToRecover.getIntegerValue();
+         receivedStepSequence.get(i).getGoalPosition(tempStep);
+         tempStep.scaleAdd(multiplier, stepAdjustment, tempStep);
+         receivedStepSequence.get(i).setGoalPosition(tempStep);
+      }
    }
 
    public void halt()
    {
-      if (haltFlag.getBooleanValue() == false)
+      if (!haltFlag.getBooleanValue())
       {
          haltFlag.set(true);
          haltTime.set(robotTimestamp.getDoubleValue() + haltTransitionDurationParameter.getValue());
       }
    }
 
-   public RecyclingArrayList<YoQuadrupedTimedStep> getStepSequence()
+   public YoPreallocatedList<YoQuadrupedTimedStep> getStepSequence()
    {
-      return stepSequence;
+      return receivedStepSequence;
    }
 
    public ArrayList<YoQuadrupedTimedStep> getActiveSteps()
@@ -118,17 +201,22 @@ public class QuadrupedStepMessageHandler
    {
       activeSteps.clear();
 
-      for (int i = 0; i < stepSequence.size(); i++)
+      for (int i = 0; i < receivedStepSequence.size(); i++)
       {
          double currentTime = robotTimestamp.getDoubleValue();
-         double startTime = stepSequence.get(i).getTimeInterval().getStartTime();
-         double endTime = stepSequence.get(i).getTimeInterval().getEndTime();
+         double startTime = receivedStepSequence.get(i).getTimeInterval().getStartTime();
+         double endTime = receivedStepSequence.get(i).getTimeInterval().getEndTime();
 
          if (MathTools.intervalContains(currentTime, startTime, endTime))
          {
-            activeSteps.add(stepSequence.get(i));
+            activeSteps.add(receivedStepSequence.get(i));
          }
       }
    }
 
+   public void reset()
+   {
+      haltFlag.set(false);
+      receivedStepSequence.clear();
+   }
 }
